--- a/chat.html
+++ b/chat.html
@@ -10,7 +10,7 @@
 <body>
     <textarea id="prompt-input" style="width:100vw;height:4em" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
     <div style="text-align:right">
-        <input type="checkbox" id="enable-voice" style="width:2em;height:2em">
+        <input type="checkbox" id="enable-voice" style="width:2em;height:2em" checked>
         <label for="enable-voice">Enable Voice</label>
         <button id="submit-button" style="width:50vw; text-align:center;height:4em; font-weight:bold">Submit</button>
     </div>
