--- a/chat.html
+++ b/chat.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Chat GPT Voice</title>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>body,html{margin:0;height:100%;font-size:larger;background:black;color:white}</style>
 </head>
 <body>
     <textarea id="prompt-input" style="width:100vw;height:4em" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
     <div style="text-align:right">
-        <input type="checkbox" id="enable-voice" style="width:2em;height:2em" checked>
+        <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em">
         <label for="enable-voice">Enable Voice</label>
         <button id="submit-button" style="width:50vw; text-align:center;height:4em; font-weight:bold">Submit</button>
     </div>
