--- a/chat.html
+++ b/chat.html
@@ -19,7 +19,7 @@
             this.body = document.body;
             this.$ = (id) => document.getElementById(id);
             this.stopStreaming = false;
-            this.cancelSpeaking = () => { stopStreaming = true; speechSynthesis.cancel(); }
+            this.cancelSpeaking = () => { timer.disableSpeaking();  stopStreaming = true; speechSynthesis.cancel(); }
             body.addEventListener('beforeunload', () => this.cancelSpeaking());
             let enableVoice = $('enable-voice'), submitBtn = $('submit-button'), promptInput = $('prompt-input'), openaiOutput = $('openai-output');
             promptInput.focus();
@@ -55,16 +55,26 @@
 
             let sentences = []
             let sIndex = 0;
-            setInterval(() => {
-                if (!enableVoice.checked) return;
-                if (!speechSynthesis.speaking && sentences.length > 0 && sentences.length > sIndex) {
-                    var utter = new SpeechSynthesisUtterance();
-                    utter.text = sentences[sIndex].join('');
-                    utter.lang = 'en-AU';
-                    utter.rate = 1.4;
-                    speechSynthesis.speak(utter);
-                    sIndex++;
-                }}, 500);
+            const timer = {
+                iid: 0,
+                enableSpeaking: function () { 
+                    this.disableSpeaking();
+                    this.iid = setInterval(() => {
+                        if (!enableVoice.checked) return;
+                        if (!speechSynthesis.speaking && sentences.length > 0 && sentences.length > sIndex) {
+                            var utter = new SpeechSynthesisUtterance();
+                            utter.text = sentences[sIndex].join('');
+                            utter.lang = 'en-AU';
+                            utter.rate = 1.4;
+                            speechSynthesis.speak(utter);
+                            sIndex++;
+                        }
+                    }, 500);
+                },
+                disableSpeaking: function () {
+                    if (this.iid) clearInterval(this.iid)
+                }
+            };
 
             this.openAiSend = async (input, output, token) => {
                 const response = await fetch('https://api.openai.com/v1/chat/completions', {
@@ -77,6 +87,7 @@
                 sIndex = 0;
                 const reader = response.body.getReader();
                 stopStreaming = false;
+                timer.enableSpeaking();
                 while (true) {
                     const { done, value } = await reader.read();
                     if (done) break;
