--- a/tabs.html
+++ b/tabs.html
@@ -52,7 +52,7 @@
       }
     </style>
 </head>
-<body onselect=function(e){e.preventDefault()}>
+<body>
     <div style="float:right;background:black">
         <a class="nilla" href="#">Voice</a>
     </div>
