--- a/tabs.html
+++ b/tabs.html
@@ -74,7 +74,7 @@
         const $one = sel => document.querySelector(sel);
 
         let nilla = $one('.nilla');
-        let src = (nilla.textContent == "Nilla") ? "vanilla.html" : "chat.html";
+        let src = (nilla.textContent == "Nilla") ? "https://raw.githack.com/casualwriter/vanilla-chatgpt/main/source/index.html" : "chat.html";
         nilla.click(e => {
             if (nilla.textContent == "Nilla") {
                 nilla.textContent = "Voice";
