--- a/chat.html
+++ b/chat.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>body, html {margin:0;height:100%;font-size:larger;background:black;color:white}</style>
+    <style>body, html {margin:0;height:100%;font-size:large;background:black;color:white}</style>
 </head>
 <body>
-    <textarea id="prompt-input" style="width:100vw;height:4em;font-size:larger" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
+    <textarea id="prompt-input" style="width:100vw;height:4em;font-size:large" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
     <div style="text-align:right">
         <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Enable Voice</label>
-        <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:larger">Submit</button>
+        <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:large">Submit</button>
     </div>
     <div id="openai-output" style="white-space:pre-wrap; color: white"></div>
     <script>
