--- a/chat.html
+++ b/chat.html
@@ -5,29 +5,35 @@
     <meta charset="utf-8" />
     <!--<link rel="manifest" href="manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>body, html {margin:0;height:100%;font-size:large;background:black;color:white}</style>
+    <style>body, html {margin:0;height:100%;font-size:larger;background:black;color:white}</style>
 </head>
 <body>
-    <textarea id="prompt-input" style="width:100vw;height:4em;font-size:large" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
+    <textarea id="prompt-input" style="width:100vw;height:4em;font-size:larger" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
     <div style="text-align:right">
-        <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Enable Voice</label>
-        <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:large">Submit</button>
+        <input type="checkbox" id="code-cbx" style="width:2em;height:2em"><label for="code-cbx">Code</label>
+        <input checked type="checkbox" id="enable-voice" style="width:2em;height:2em"><label for="enable-voice">Voice</label>
+        <button id="submit-button" style="width:50vw;text-align:center;height:2.5em;font-size:larger">Submit</button>
     </div>
+    <button id="save-code" style="display:none">Save</button>
     <div id="openai-output" style="white-space:pre-wrap; color: white"></div>
+    <div id="code-output"></div>
+
     <script>
         const body = document.body;
         const $ = id => document.getElementById(id);
         let stopStreaming = false;
         const cancelSpeaking = () => { let wasSpeaking = speechSynthesis.speaking; timer.disableSpeaking(); stopStreaming = true; speechSynthesis.cancel(); return wasSpeaking; }
         body.addEventListener('beforeunload', () => this.cancelSpeaking());
-        let enableVoice = $('enable-voice'), submitBtn = $('submit-button'), promptInput = $('prompt-input'), openaiOutput = $('openai-output');
+        let enableVoice = $('enable-voice'), codeCbx = $('code-cbx'), submitBtn = $('submit-button'), promptInput = $('prompt-input'),
+            openaiOutput = $('openai-output'), codeOutput = $('code-output'), saveCode = $('save-code');
         promptInput.focus();
         enableVoice.addEventListener('change', e => localStorage.setItem('ENABLE_VOICE', e.target.checked));
         enableVoice.disabled = false;
         enableVoice.checked = (localStorage.getItem('ENABLE_VOICE') ?? "true") === "true";
-
+        
         let history = []
         submitBtn.addEventListener('click', async () => {
+            codeOutput.textContent = '';
             const words = promptInput.value.split(' ');
             if (words.length < 3) body.style.background = words.join(''); //easter egg for my son
             cancelSpeaking();
@@ -38,8 +44,18 @@
             }
             await openAiSend(promptInput, openaiOutput, token);
             history.push({ role: 'user', content: promptInput.value }, { role: 'assistant', content: openaiOutput.textContent });
-            if (history.length > 4) { history.shift(); history.shift(); } 
+            if (history.length > 4) { history.shift(); history.shift(); }
+            outputHtml(codeOutput);
         });
+
+        saveCode.addEventListener('click', () => outputHtml(codeOutput));
+        const outputHtml = (div) => {
+            if (codeCbx.checked) {
+                openaiOutput.contentEditable = "true"; saveCode.style.display = 'block';
+                div.style.background = 'white'; div.style.color = 'black';
+                div.innerHTML = `<button onclick="eval(document.getElementsByTagName('script')[0].innerHTML)">Run</button><br/>` + openaiOutput.textContent.replace('```html', '').replace('```', '').replace('```', '');
+            } else { openaiOutput.contentEditable = "false"; saveCode.style.display = 'none'; }
+        }
 
         const recognition = (input, btn, lang = 'en-US') => {
             var SpeechRecognition = SpeechRecognition || webkitSpeechRecognition;
@@ -72,10 +88,12 @@
         };
 
         const openAiSend = async (input, output, token) => {
+            let system = [];
+            if (codeCbx.checked) system.push({ "role": "system", "content": "Write HTML and JS only.No comments or explanation.Put script tag in the body." });
             const response = await fetch('https://api.openai.com/v1/chat/completions', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
-                body: JSON.stringify({ model: "gpt-3.5-turbo", temperature: 0.8, stream: true, messages: [...history, { role: "user", content: input.value }] })
+                body: JSON.stringify({ model: "gpt-3.5-turbo", temperature: 0.8, stream: true, messages: [...system, ...history, { role: "user", content: input.value }] })
             });
             let arr = [], arr2 = [];
             sentences = []; sIndex = 0;
@@ -83,7 +101,7 @@
             reader.onerror = err => cancelSpeaking();
             stopStreaming = false;
             timer.enableSpeaking();
-            for(;;) {
+            for (; ;) {
                 const { done, value } = await reader.read();
                 if (done) return;
                 const textDecoder = new TextDecoder();
