--- a/chat.html
+++ b/chat.html
@@ -6,6 +6,7 @@
     <!--<link rel="manifest" href="manifest.json" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>body, html {margin:0;height:100%;font-size:large;background:black;color:white}</style>
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <textarea id="prompt-input" style="width:100vw;height:4em;font-size:large" placeholder="Enter prompt or touch screen for voice prompt"></textarea>
