--- a/tabs.html
+++ b/tabs.html
@@ -59,6 +59,7 @@
             font-size: large;
         }
     </style>
+    <link rel="icon" href="data:,">
 </head>
 <body>
     <div style="float:right;background:black">
