--- a/record.html
+++ b/record.html
@@ -31,7 +31,7 @@
                 playButton.disabled = true;
             }
         }
-        init();
+        await init();
 
         function startRecording() {
             try {
